# IMUAnalysis

./: CMakeLists.txt  allanVariance.cpp  allanVariance.h  autoCorrelation.cpp  autoCorrelation.h  main.cpp
